https://github.com/metasfresh/metasfresh/issues/695
Change folders as discussed together with @metasnw

also port the change to the linux sh file and the pom.xml which creates thw windows exe file

unrelated: add METASFRESH_CLIENT_CHECK_OPTS to allow disabling the client check
unrelated: remove obsolete MaxPermSize parameter
unrelated: clean up unused properties in the pom.xml and update to the latest launchj4 version

https://github.com/metasfresh/metasfresh/issues/695 swingUI: provide lib-dirs to access user jars and dlls at runtime